Fix header overflow issue in 02-flex-header
Set min-width of header to fit-content to address overflow. This will
prevent the header from shrinking past a certain point.

Also, set margin on logo to 8px all round, so that when min-width is
reached, the logo and the links will not touch.

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-width: fit-content;
 }
 
 .logo {
@@ -12,7 +13,7 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: 8px auto;
+  margin: 8px;
 }
 
 .left-links {
@@ -23,7 +24,6 @@
 .right-links {
   display: flex;
   margin-right: 8px;
-  min-width: fit-content;
 }
 
 ul {
